<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.view.View"/>
        <variable name="viewModel" type="com.darja.tmdb.ui.movieslist.MoviesListViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent" android:layout_height="match_parent">
        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/title_movies"
        />

        <!-- Movies Grid -->
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/moviesGrid"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintBottom_toBottomOf="parent"
        />

        <!-- Progress -->
        <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:id="@+id/progressBar"
                     android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/toolbar"
                     app:layout_constraintBottom_toBottomOf="parent"
        />

        <!-- Empty view -->
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/empty_indicator"
                  android:text="@string/no_result"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/toolbar"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:textSize="20sp"
                  android:visibility="@{viewModel.isResultEmpty ? View.VISIBLE : View.GONE}"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>