<resources>
    <string name="app_name">TmdbDemo</string>

    <string name="title_movies">Movies</string>
    <string name="title_movie_details">Movie Details</string>

    <string name="menu_search">Search</string>

    <string name="no_result">Nothing found</string>
</resources>
