...
                           app:layout_constraintDimensionRatio="H,16:9"
                           android:background="@android:color/black"
                />

                <!-- Title -->
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:id="@+id/title"
                          android:text="@{viewModel.movie.title}"
                          tools:text="Crazy Rich Asians"
                          android:textSize="16sp"
                          android:textColor="@android:color/white"
                          android:layout_marginStart="@dimen/spacing_default"
                          android:layout_marginEnd="@dimen/spacing_default"
...
                          app:layout_constraintEnd_toEndOf="parent"
                          app:layout_constraintTop_toBottomOf="@id/banner"
                />

                <!-- Description -->
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:id="@+id/description"
                          android:text="@{viewModel.movie.description}"
                          tools:text="Attributes are values specified in your apps theme. Those specific attributes in your example are all values specified in the themes provided by the support library. "
                          android:textColor="@android:color/white"
                          android:layout_marginStart="@dimen/spacing_default"
                          android:layout_marginEnd="@dimen/spacing_default"
                          android:layout_marginTop="@dimen/spacing_default"
...
